add button styles and color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <h1 class="text-uppercase"><strong>This is the greatest startup Page of All time</strong></h1>
-    <button>find out more</button>
+    <hr>
+    <button class="btn btn-primary btn-xl">find out more</button>
 
   </body>
 </html>
